--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "license": "ISC",
   "devDependencies": {
     "babel-loader": "^8.2.2",
+    "html-webpack-plugin": "^5.3.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "webpack": "^5.36.0",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "@babel/core": "^7.13.16",
