--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "react-webpack-setup",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "babel-loader": "^8.2.2",
-    "html-webpack-plugin": "^5.3.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "webpack": "^5.36.0",
-    "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^3.11.2"
-  },
-  "dependencies": {
-    "@babel/core": "^7.13.16",
-    "@babel/preset-env": "^7.13.15",
-    "@babel/preset-react": "^7.13.13"
-  }
+	"name": "react-webpack-setup",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"start": "webpack serve --config webpack.dev.js --open --hot",
+		"build": "webpack --config webpack.prod.js"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"babel-loader": "^8.2.2",
+		"html-webpack-plugin": "^5.3.1",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"webpack": "^5.36.0",
+		"webpack-cli": "^4.6.0",
+		"webpack-dev-server": "^3.11.2"
+	},
+	"dependencies": {
+		"@babel/core": "^7.13.16",
+		"@babel/preset-env": "^7.13.15",
+		"@babel/preset-react": "^7.13.13"
+	}
 }
