--- a/package.json
+++ b/package.json
@@ -12,9 +12,16 @@
 	"license": "ISC",
 	"devDependencies": {
 		"babel-loader": "^8.2.2",
+		"clean-webpack-plugin": "^4.0.0-alpha.0",
+		"css-loader": "^5.2.4",
+		"file-loader": "^6.2.0",
+		"html-loader": "^2.1.2",
 		"html-webpack-plugin": "^5.3.1",
+		"node-sass": "^5.0.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"sass-loader": "^11.0.1",
+		"style-loader": "^2.0.0",
 		"webpack": "^5.36.0",
 		"webpack-cli": "^4.6.0",
 		"webpack-dev-server": "^3.11.2"
