--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
 		"file-loader": "^6.2.0",
 		"html-loader": "^2.1.2",
 		"html-webpack-plugin": "^5.3.1",
+		"mini-css-extract-plugin": "^1.5.0",
 		"node-sass": "^5.0.0",
+		"optimize-css-assets-webpack-plugin": "^5.0.4",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"sass-loader": "^11.0.1",
